--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    font-family: times-new-roman;
+    background-image: linear-gradient(to right, rgb(42, 72, 88), rgb(66, 42, 88));
 }
 
 code {
